Added tests for Checkout

--- a/PriceCalculator/PriceCalculator.Tests/PriceCalculator.Tests.csproj
+++ b/PriceCalculator/PriceCalculator.Tests/PriceCalculator.Tests.csproj
@@ -66,6 +66,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CheckoutTests.cs" />
     <Compile Include="InputValidatorTests.cs" />
     <Compile Include="ProductLoaderTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
